# toplot

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: documentation.yml
examples/: identifiability.ipynb
src/: posterior.py
src/toplot/: __init__.py  algorithms.py  hidden.py  scattermap.py  utils.py  weights.py
