[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toplot"
version = "0.1.0"
description = "Visualize the weights (i.e., topics) and hidden units (i.e., topic proportions) of topic models"
authors = [
  {name = "Hylke Donker", email = "h.c.donker@umcg.nl"},
  {name = "Dorien Neijzen", email = "d.neijzen@umcg.nl"},
  ]
readme = "README.md"
license = {text = "MIT License"}
keywords =[ "topic models", "visualization"]
requires-python = ">=3.11"
dependencies = [
  "matplotlib",
  "numpy",
  "pandas",
  "python_tsp",
  "seaborn",
]